--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "@types/shelljs": "^0.8.11",
     "@types/statuses": "^2.0.1",
     "pkg": "^5.8.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "debug": "^4.3.4",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
+    "shelljs": "^0.8.5",
     "statuses": "^2.0.1"
   }
 }
