--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@elastic/ecs-winston-format": "^1.3.1",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "shelljs": "^0.8.5",
-    "statuses": "^2.0.1"
+    "statuses": "^2.0.1",
+    "winston": "^3.8.2"
   }
 }
